--- a/Examples/Examples.xcodeproj/xcshareddata/xcschemes/SyncUps.xcscheme
+++ b/Examples/Examples.xcodeproj/xcshareddata/xcschemes/SyncUps.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CAD0017C2D874E6F00FA977A"
+               BuildableName = "SyncUpTests.xctest"
+               BlueprintName = "SyncUpTests"
+               ReferencedContainer = "container:Examples.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
