--- a/.spi.yml
+++ b/.spi.yml
@@ -3,6 +3,7 @@ builder:
   configs:
   - documentation_targets:
     - SharingGRDB
+    - SharingGRDBCore
     - StructuredQueriesGRDB
     - StructuredQueriesGRDBCore
     swift_version: 6.0
