--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,20 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
       - name: Run ${{ matrix.config }} tests
         run: swift test -c ${{ matrix.config }}
+
+  linux:
+    name: Linux
+    strategy:
+      matrix:
+        swift:
+          - '6.0'
+    runs-on: ubuntu-latest
+    container: swift:${{ matrix.swift }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Build Dependencies
+        run: |
+          apt-get update
+          apt-get install -y libsqlite3-dev
+      - name: Build
+        run: swift build
