--- a/Examples/Examples.xcodeproj/xcshareddata/xcschemes/Reminders.xcscheme
+++ b/Examples/Examples.xcodeproj/xcshareddata/xcschemes/Reminders.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1620"
+   LastUpgradeVersion = "1640"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -27,15 +27,20 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:RemindersTests/Reminders.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO"
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CA5E46952DEBFE410069E0F8"
+               BlueprintIdentifier = "CA9F99472DF9134D00934431"
                BuildableName = "RemindersTests.xctest"
                BlueprintName = "RemindersTests"
                ReferencedContainer = "container:Examples.xcodeproj">
