--- a/Examples/CloudKitDemo/CloudKitDemo.entitlements
+++ b/Examples/CloudKitDemo/CloudKitDemo.entitlements
@@ -8,7 +8,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.co.pointfree.SQLiteData.demos.CloudKitDemo</string>
+		<string>iCloud.indave.pointfree.cloudkitdemo</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -16,6 +16,10 @@
 	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.indave.pointfree.cloudkitdemo</string>
+	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 </dict>
