Remove Linux from CI while GRDB doesn't support it

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,19 +43,20 @@ jobs:
       - name: xcodebuild ${{ matrix.scheme }}
         run: make DERIVED_DATA_PATH=~/.derivedData SCHEME="${{ matrix.scheme }}" xcodebuild-raw
 
-  linux:
-    name: Linux
-    strategy:
-      matrix:
-        swift:
-          - '6.1'
-    runs-on: ubuntu-latest
-    container: swift:${{ matrix.swift }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Build Dependencies
-        run: |
-          apt-get update
-          apt-get install -y libsqlite3-dev
-      - name: Build
-        run: swift build
+  # NB: GRDB 7.6.1 does not currently build on Linux.
+  # linux:
+  #   name: Linux
+  #   strategy:
+  #     matrix:
+  #       swift:
+  #         - '6.1'
+  #   runs-on: ubuntu-latest
+  #   container: swift:${{ matrix.swift }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Install Build Dependencies
+  #       run: |
+  #         apt-get update
+  #         apt-get install -y libsqlite3-dev
+  #     - name: Build
+  #       run: swift build
