--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,15 @@ jobs:
         run: make DERIVED_DATA_PATH=~/.derivedData SCHEME="${{ matrix.scheme }}" xcodebuild-raw
       - name: Output test failures
         run: |
-          xcrun xcresulttool get test-results summary --path TestResults.xcresult --format json | jq -r '.testFailures[] | "\(.testIdentifierString): \(.failureText)"'
-        if: success() || failure()
+          xcrun xcresulttool get test-results tests --path TestResults.xcresult --format json | jq -r '
+            .testNodes[]
+            | .. | objects | select(.nodeType=="Test Case")
+            | . as $tc
+            | ($tc.children // [])[]
+            | select(.nodeType=="Failure Message")
+            | "✘ Test \($tc.name) recorded an issue at \(.name)\n"
+          '
+        if: failure()
 
   # NB: GRDB 7.6.1 does not currently build on Linux.
   # linux:
