--- a/Examples/CloudKitDemo/CloudKitDemo.entitlements
+++ b/Examples/CloudKitDemo/CloudKitDemo.entitlements
@@ -4,19 +4,13 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
-	<key>com.apple.developer.aps-environment</key>
-	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.co.pointfree.SQLiteData.demos.CloudKitDemo</string>
+		<string>iCloud.co.pointfree.SQLiteData.CloudKitDemo</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
 		<string>CloudKit</string>
 	</array>
-	<key>com.apple.security.app-sandbox</key>
-	<true/>
-	<key>com.apple.security.files.user-selected.read-only</key>
-	<true/>
 </dict>
 </plist>
