Rename more references to sqlite-data

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,14 +17,14 @@ jobs:
         env:
           INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_PROJECT_CHANNEL_WEBHOOK_URL }}
         with:
-          text: sharing-grdb ${{ github.event.release.tag_name }} has been released.
+          text: sqlite-data ${{ github.event.release.tag_name }} has been released.
           blocks: |
             [
               {
                 "type": "header",
                 "text": {
                   "type": "plain_text",
-                  "text": "sharing-grdb ${{ github.event.release.tag_name}}"
+                  "text": "sqlite-data ${{ github.event.release.tag_name}}"
                 }
               },
               {
@@ -56,14 +56,14 @@ jobs:
         env:
           INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_RELEASES_WEBHOOK_URL }}
         with:
-          text: sharing-grdb ${{ github.event.release.tag_name }} has been released.
+          text: sqlite-data ${{ github.event.release.tag_name }} has been released.
           blocks: |
             [
               {
                 "type": "header",
                 "text": {
                   "type": "plain_text",
-                  "text": "sharing-grdb ${{ github.event.release.tag_name}}"
+                  "text": "sqlite-data ${{ github.event.release.tag_name}}"
                 }
               },
               {
